@@ -5642,9 +5642,17 @@ name|node
 argument_list|)
 operator|||
 operator|!
-name|fitInMaxShare
+name|fitsInMaxShare
 argument_list|(
 name|queue
+argument_list|,
+name|node
+operator|.
+name|getReservedContainer
+argument_list|()
+operator|.
+name|getReservedResource
+argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -5816,25 +5824,41 @@ name|updateRootQueueMetrics
 argument_list|()
 expr_stmt|;
 block|}
-DECL|method|fitInMaxShare (FSQueue queue)
-specifier|private
+DECL|method|fitsInMaxShare (FSQueue queue, Resource additionalResource)
+specifier|static
 name|boolean
-name|fitInMaxShare
+name|fitsInMaxShare
 parameter_list|(
 name|FSQueue
 name|queue
+parameter_list|,
+name|Resource
+name|additionalResource
 parameter_list|)
 block|{
-if|if
-condition|(
+name|Resource
+name|usagePlusAddition
+init|=
 name|Resources
 operator|.
-name|fitsIn
+name|add
 argument_list|(
 name|queue
 operator|.
 name|getResourceUsage
 argument_list|()
+argument_list|,
+name|additionalResource
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|Resources
+operator|.
+name|fitsIn
+argument_list|(
+name|usagePlusAddition
 argument_list|,
 name|queue
 operator|.
@@ -5863,9 +5887,11 @@ literal|null
 condition|)
 block|{
 return|return
-name|fitInMaxShare
+name|fitsInMaxShare
 argument_list|(
 name|parentQueue
+argument_list|,
+name|additionalResource
 argument_list|)
 return|;
 block|}
