@@ -5658,12 +5658,12 @@ name|Test
 argument_list|(
 name|timeout
 operator|=
-literal|5000
+literal|500000
 argument_list|)
-DECL|method|testContainerReservationNotExceedingQueueMax ()
+DECL|method|testContainerReservationAttemptExceedingQueueMax ()
 specifier|public
 name|void
-name|testContainerReservationNotExceedingQueueMax
+name|testContainerReservationAttemptExceedingQueueMax
 parameter_list|()
 throws|throws
 name|Exception
@@ -5724,14 +5724,7 @@ name|out
 operator|.
 name|println
 argument_list|(
-literal|"<minResources>1024mb,5vcores</minResources>"
-argument_list|)
-expr_stmt|;
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"<maxResources>2048mb,10vcores</maxResources>"
+literal|"<maxResources>2048mb,5vcores</maxResources>"
 argument_list|)
 expr_stmt|;
 name|out
@@ -5746,13 +5739,6 @@ operator|.
 name|println
 argument_list|(
 literal|"<queue name=\"queue2\">"
-argument_list|)
-expr_stmt|;
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"<minResources>1024mb,5vcores</minResources>"
 argument_list|)
 expr_stmt|;
 name|out
@@ -5908,9 +5894,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// Now queue 2 requests likewise
-name|ApplicationAttemptId
-name|attId
-init|=
 name|createSchedulingRequest
 argument_list|(
 literal|1024
@@ -5921,7 +5904,340 @@ literal|"user2"
 argument_list|,
 literal|1
 argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|updateEvent
+argument_list|)
+expr_stmt|;
+comment|// Make sure queue 2 is allocated app capacity
+name|assertEquals
+argument_list|(
+literal|1024
+argument_list|,
+name|scheduler
+operator|.
+name|getQueueManager
+argument_list|()
+operator|.
+name|getQueue
+argument_list|(
+literal|"queue2"
+argument_list|)
+operator|.
+name|getResourceUsage
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ApplicationAttemptId
+name|attId1
+init|=
+name|createSchedulingRequest
+argument_list|(
+literal|1024
+argument_list|,
+literal|"queue1"
+argument_list|,
+literal|"user1"
+argument_list|,
+literal|1
+argument_list|)
 decl_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|updateEvent
+argument_list|)
+expr_stmt|;
+comment|// Ensure the reservation does not get created as allocated memory of
+comment|// queue1 exceeds max
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|scheduler
+operator|.
+name|getSchedulerApp
+argument_list|(
+name|attId1
+argument_list|)
+operator|.
+name|getCurrentReservation
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|500000
+argument_list|)
+DECL|method|testContainerReservationNotExceedingQueueMax ()
+specifier|public
+name|void
+name|testContainerReservationNotExceedingQueueMax
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FairSchedulerConfiguration
+operator|.
+name|ALLOCATION_FILE
+argument_list|,
+name|ALLOC_FILE
+argument_list|)
+expr_stmt|;
+name|PrintWriter
+name|out
+init|=
+operator|new
+name|PrintWriter
+argument_list|(
+operator|new
+name|FileWriter
+argument_list|(
+name|ALLOC_FILE
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<?xml version=\"1.0\"?>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"root\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queue1\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>3072mb,10vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queue2\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>2048mb,10vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|reinitialize
+argument_list|(
+name|conf
+argument_list|,
+name|resourceManager
+operator|.
+name|getRMContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Add a node
+name|RMNode
+name|node1
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|1
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|3072
+argument_list|,
+literal|5
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|"127.0.0.1"
+argument_list|)
+decl_stmt|;
+name|NodeAddedSchedulerEvent
+name|nodeEvent1
+init|=
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|nodeEvent1
+argument_list|)
+expr_stmt|;
+comment|// Queue 1 requests full capacity of the queue
+name|createSchedulingRequest
+argument_list|(
+literal|2048
+argument_list|,
+literal|"queue1"
+argument_list|,
+literal|"user1"
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|NodeUpdateSchedulerEvent
+name|updateEvent
+init|=
+operator|new
+name|NodeUpdateSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|updateEvent
+argument_list|)
+expr_stmt|;
+comment|// Make sure queue 1 is allocated app capacity
+name|assertEquals
+argument_list|(
+literal|2048
+argument_list|,
+name|scheduler
+operator|.
+name|getQueueManager
+argument_list|()
+operator|.
+name|getQueue
+argument_list|(
+literal|"queue1"
+argument_list|)
+operator|.
+name|getResourceUsage
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Now queue 2 requests likewise
+name|createSchedulingRequest
+argument_list|(
+literal|1024
+argument_list|,
+literal|"queue2"
+argument_list|,
+literal|"user2"
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 name|scheduler
 operator|.
 name|update
@@ -6001,53 +6317,138 @@ name|getMemory
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// Now remove app of queue2
-name|AppAttemptRemovedSchedulerEvent
-name|appRemovedEvent1
-init|=
-operator|new
-name|AppAttemptRemovedSchedulerEvent
-argument_list|(
-name|attId
-argument_list|,
-name|RMAppAttemptState
-operator|.
-name|FINISHED
-argument_list|,
-literal|false
-argument_list|)
-decl_stmt|;
-name|scheduler
-operator|.
-name|update
-argument_list|()
-expr_stmt|;
+comment|// Exercise checks that reservation fits
 name|scheduler
 operator|.
 name|handle
 argument_list|(
-name|appRemovedEvent1
+name|updateEvent
 argument_list|)
 expr_stmt|;
-comment|// Queue should have no apps
+comment|// Ensure the reservation still exists as allocated memory of queue1 doesn't
+comment|// exceed max
 name|assertEquals
 argument_list|(
-literal|0
+literal|1024
 argument_list|,
 name|scheduler
 operator|.
-name|getQueueManager
-argument_list|()
-operator|.
-name|getQueue
+name|getSchedulerApp
 argument_list|(
-literal|"queue2"
+name|attId1
 argument_list|)
 operator|.
-name|getResourceUsage
+name|getCurrentReservation
 argument_list|()
 operator|.
 name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Now reduce max Resources of queue1 down to 2048
+name|out
+operator|=
+operator|new
+name|PrintWriter
+argument_list|(
+operator|new
+name|FileWriter
+argument_list|(
+name|ALLOC_FILE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<?xml version=\"1.0\"?>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"root\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queue1\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>2048mb,10vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queue2\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>2048mb,10vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|reinitialize
+argument_list|(
+name|conf
+argument_list|,
+name|resourceManager
+operator|.
+name|getRMContext
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -15752,8 +16153,7 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// Reserved container should will be at higher priority,
-comment|// since old reservation cannot be satisfied
+comment|// Reserved container should still be at lower priority
 for|for
 control|(
 name|RMContainer
@@ -15767,7 +16167,7 @@ control|)
 block|{
 name|assertEquals
 argument_list|(
-literal|1
+literal|2
 argument_list|,
 name|container
 operator|.
@@ -15844,7 +16244,7 @@ argument_list|(
 name|updateEvent
 argument_list|)
 expr_stmt|;
-comment|// Reserved container (at higher priority) should be run
+comment|// Reserved container (at lower priority) should be run
 name|Collection
 argument_list|<
 name|RMContainer
@@ -15878,7 +16278,7 @@ name|Assert
 operator|.
 name|assertEquals
 argument_list|(
-literal|1
+literal|2
 argument_list|,
 name|liveContainer
 operator|.
